--- a/css/styles.css
+++ b/css/styles.css
@@ -184,15 +184,15 @@ i.item-khuVuc-like-fill{
 }
 .timkiem .error{
     font-size: 12px;
-    color: red;
+    color: #fff;
     line-height: 12px;
     height: 12px;
     margin-top: 5px;
     padding-bottom: 15px;
-    margin-left: 10px;
-    font-style:  italic;
+    margin-left: 100px;
+    font-style:  italic; 
 }
-.pt-giam-gia {
+.products .items .pt-giam-gia {
     width: 40px;
     height: 36px;
     position: absolute;
