--- a/css/style.css
+++ b/css/style.css
@@ -619,7 +619,7 @@ body{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 20px;
-    margin-top: -20px;
+    margin-top: -20px;    
 }
 #products .items .item{
     border: 1px solid #ddd;
@@ -637,6 +637,7 @@ body{
     height: 100%;
     margin: auto;
     border: none;
+    cursor: pointer;
 }
 #products .items .item .item-ten{
     font-size: 20px;
@@ -646,24 +647,26 @@ body{
 }
 #products .items .item .item-gia{
     margin-bottom: 10px;
-    margin-left: 20px;
     align-items: baseline;
     display: flex;
     flex-wrap: wrap;
+    letter-spacing: -0.5px;
 }
 #products .items .item .item-gia .item-gia-goc{
     font-size: 14px;
     text-decoration: line-through;
     color: #666;
+    margin-left: -10px;
 }
 #products .items .item .item-gia .item-gia-ban{
     font-size: 16px;
     color: var(--primary-color);
-    margin-left: 25px;
+    margin-left: 10px;
 }
 #products .items .item .btn{
     margin: auto;
-    display: block;
+    display: block;    
+    cursor: pointer;
 }
 .items .item .item-khuVuc{
     display: flex;
@@ -674,7 +677,7 @@ body{
 i.item-khuVuc-like-fill{
     color: var(--primary-color);
     display: none;
-    
+    cursor: pointer;    
 }
 .item-khuVuc-like--like .item-khuVuc-like-fill{
     display: inline-block;
