--- a/css/styles.css
+++ b/css/styles.css
@@ -182,16 +182,7 @@ i.item-khuVuc-like-fill{
 .item-kV{
     color: #666;
 }
-.timkiem .error{
-    font-size: 12px;
-    color: #fff;
-    line-height: 12px;
-    height: 12px;
-    margin-top: 5px;
-    padding-bottom: 15px;
-    margin-left: 100px;
-    font-style:  italic; 
-}
+
 .products .items .pt-giam-gia {
     width: 40px;
     height: 36px;
@@ -207,4 +198,8 @@ i.item-khuVuc-like-fill{
     font-weight: 500;
     background-image: url('images/deal-tag.png');
     background-repeat: no-repeat;
+}
+#thongbaoLoi{
+    margin-top: 4px;
+    padding: 0;
 }
