giãn cách san rphamr giỏ àhangf

--- a/css/gioHang.css
+++ b/css/gioHang.css
@@ -26,6 +26,7 @@ img{
     display: flex;
     flex-direction: row;
     align-items: center;
+    padding-bottom: 10px;
 }
 .item-giohang .hinhanh img{
     width: 60px;
