--- a/css/styles.css
+++ b/css/styles.css
@@ -202,6 +202,7 @@ i.item-khuVuc-like-fill{
 #thongbaoLoi{
     margin-top: 4px;
     padding: 0;
+    z-index: 5;
 }
 .action{
     background-color: rgb(224, 87, 71);
