--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,7 @@ body{
     border-right: 1px solid snow;
     text-align: center;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 .dangnhap{
@@ -166,6 +167,7 @@ body{
     background-color: silver;
     text-align: center;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 .hiennd:hover .thongbao{
