--- a/css/style.css
+++ b/css/style.css
@@ -860,7 +860,7 @@ i.item-khuVuc-like-fill{
 #footer .footer_noiDung{
     width: 1200px;
     margin: auto;
-    border-top: 1px solid #ccc;
+    border-top: 1px solid blue;
     border-bottom: 1px solid rgb(252, 251, 251);
     display: flex;
     justify-content: space-between;
@@ -871,7 +871,7 @@ i.item-khuVuc-like-fill{
 .footer_noiDung_header{
     color: #ccc;
     text-align: center;
-    margin-top: 30px;
+    margin-top: 40px;
     font-size: 11px;
     line-height: 16px;
 }
@@ -895,8 +895,9 @@ i.item-khuVuc-like-fill{
 .chamsoc_noidung{
     list-style: none;
     margin-top: 6px;
-    color: #f5f5f5;
+    color: whitesmoke;
     cursor: pointer;
+    font-size: 14px;
 }
 .ndcskh{
     line-height: 30px;
@@ -910,6 +911,7 @@ i.item-khuVuc-like-fill{
     margin-left: 70px;
     color: #f5f5f5;
     cursor: pointer;
+    font-size: 14px;
 }
 .theodoi_noidung{
     list-style: none;
@@ -921,11 +923,17 @@ i.item-khuVuc-like-fill{
 .qrtai{
     width: 80px;
     height: 80px;
-    border: 1px solid #ddd;
+    border: 2px solid #222;
     margin-top: 10px;
+    margin-left: 10px;
+    cursor: pointer;
 }
-.lienketcungqr
-.qr_ap_link
+.lienketcungqr{
+    width: 120px;
+    float: right;
+    margin-top: -70px;
+    margin-right: 10px;
+}
 /*======Hiển thị đăng kí đăng nhập=======*/
 .hienThiDkDn{
     position: fixed;
@@ -960,6 +968,7 @@ i.item-khuVuc-like-fill{
     border-radius: 5px;
     z-index: 1;
     overflow: hidden;
+    display: none;
     animation: growth linear 0.2s;
 }
 .khung_inner{
