--- a/css/style.css
+++ b/css/style.css
@@ -434,7 +434,7 @@ img{
     border-radius: 3px;
     box-shadow: 1px 1px 2px #ddd;
     position: absolute;
-    background-color: var(--light-color);
+    background-color: var(--primary-color);
     top: 150px;
     margin-top: 50px;
     display: none;
@@ -449,11 +449,20 @@ img{
     padding: 10px 20px;
 }
 .menu-lv2 .item-lv2:hover{
+    background-color: var(--primary-color);
     text-decoration: underline;
-    
 }
-.menu-lv2 .item-lv2 a:hover{
-    color: var(--primary-color);
+.menu-lv2 .item-lv2:first-child:hover{
+    background-color: var(--primary-color);
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    text-decoration: underline;
+}
+.menu-lv2 .item-lv2:last-child:hover{
+    background-color: var(--primary-color);
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    text-decoration: underline;
 }
 .nhacnho{
     font-size: 14px;
@@ -1027,7 +1036,6 @@ i.item-khuVuc-like-fill{
     border-radius: 5px;
     z-index: 1;
     overflow: hidden;
-    display: none;
     animation: growth linear 0.2s;
 }
 .khung_inner{
