--- a/css/style.css
+++ b/css/style.css
@@ -485,25 +485,38 @@ img{
     width: 1200px;
     margin: 0 auto;
     display: flex;
-
-
 }
 #danh-muc{
     width: 200px;
     height: fit-content;
     margin-top: 20px;
-    border: 1px solid #666;
-    background-image: linear-gradient(0, #fe6433, #f53e2d );
+    align-items: center;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    justify-content: space-between;
 }
 .menudanhmuc{   
     width: 100%;
+    height: 283px;
+    border: 1px solid #ccc;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    background-color: #fff;
 }
 .tieude{
-    width: 100%;
-    height: 40px;
+    width: 100%;    
     border-bottom: 1px solid #ccc;
-    margin-top: 10px;
     color: white;
+    font-size: 16px;
+    line-height: 50px;
+    font-weight: 600;
+    background-image: linear-gradient(0, #fe6433, #f53e2d );
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    justify-content: space-between;
+}
+.tieude1{
+    margin-left: 15px;
 }
 .itm1{
     width: 100%;
@@ -514,28 +527,111 @@ img{
     text-decoration: none;
     width: 100%;
     height: 20px;
-    color: white;
+    color: var(--primary-color);
 }
 .item-danhmuc .fas{
-    color: blue;
+    color: var(--primary-color);
 }
 .item-danhmuc{
-    margin-left: 20px;
-    margin-top: 20px;
+    margin-left: 26px;
+    line-height: 40px;
 }
 .item-danhmuc2{
     margin-left: 40px;
+    line-height: 40px;
 }
-.item-danhmuc2 a:hover{
-    color: blue;
+.itm1:hover{
+    background-color: #ccc;
+    cursor: pointer;
 }
-.item-danhmuc a:hover{
-    color: blue;
+.itm1:last-child:hover{
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;    
+    background-color: #ccc;
+    cursor: pointer;
 }
 .tieude .fas{
     align-items: center;
     margin-left: 20px;
 }
+.tieude2{
+    width: 100%;
+    height: 50px;
+    color: white;
+    font-size: 16px;
+    line-height: 50px;
+    font-weight: 600;
+    background-image: linear-gradient(0, #fe6433, #f53e2d );
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    justify-content: space-between;
+    margin-top: 30px;
+}
+.mucdeban{
+    color: var(--primary-color);
+    margin-left: 15px;
+    margin-top: 15px;
+    font-weight: bold;
+    padding-bottom: 10px;
+}
+.bolocTimkiem{
+    margin-top: 20px;
+}
+
+.menudanhmuc2{   
+    width: 100%;
+    height: 245px;
+    border: 1px solid #ccc;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    background-color: #fff;
+}
+.menudanhmuc3{   
+    width: 100%;
+    height: 245px;
+    border: 1px solid #ccc;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    background-color: #fff;
+    margin-top: 5px;
+}
+.khunggiamua{
+    margin-top: 20px;
+}
+.luachongia{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: space-between;
+}
+.theThap, .theCao{
+    width: 90px;
+    height: 30px;
+    margin-top: 15px;
+    font-size: 14px;
+}
+.nganGiua{
+    width: 10px;
+    height: 30px;
+    border-bottom: 1px solid #ccc;
+}
+.apdung{
+    width: 180px;
+    height: 40px;
+    background-color: #ccc;
+    color: #fff;
+    text-align: center;
+    font-weight: bold;
+    margin-left: 10px;
+    margin-top: 10px;
+    cursor: pointer;
+}
+.apdung:hover{
+    background-color: var(--primary-color);
+}
+
+
+
 /*==================SẢN PHẨM===========*/
 .khungphan-sanpham{
     width: 980px;
@@ -987,7 +1083,7 @@ i.item-khuVuc-like-fill{
     line-height: 30px;
     color: #f5f5f5;
 }
-
+/*========DANH MỤC ==========*/
 
 
 
