--- a/css/gioHang.css
+++ b/css/gioHang.css
@@ -96,3 +96,134 @@ img{
     width: 100px;
     margin-left: 55px;
 }
+.thanhToan{
+    width: 250px;
+    height: 130px;
+    margin-left: 900px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    box-shadow: 2px 2px 4px #ddd;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+.tamTinh{
+    height: 50px;
+    border-bottom: 1px solid #ccc;
+}
+.nd1_tt{
+    line-height: 50px;
+    margin-left: 5px;  
+    color: rgb(146, 145, 145);  
+}
+.vat_tt{
+    margin-left: 110px;
+    height: 30px;
+    color: rgb(146, 145, 145);
+}
+.thanhngang{
+    width: 600px;
+    margin: auto;
+    height: 5px; 
+    margin-top: 30px;   
+    border-top: 1px dashed #f64147;
+}
+/*Phần thanh toán*/
+.phanbentrai{
+    width: 480px;
+    height: 450px;
+    margin-top: 10px;
+    background-color: #fff;
+    margin-left: 50px;    
+    border: 1px solid #ccc;
+    box-shadow: 2px 2px 4px #ddd;
+}
+.btnthanhtoan{
+    margin-top: 30px;
+}
+.thanhtoanbtn{
+    color: #fff;
+}
+.phanbenphai{
+    width: 480px;
+    height: 450px;
+    margin-top: 10px;
+    background-color: #fff;
+    margin-right: 50px;    
+    border: 1px solid #ccc;
+    box-shadow: 2px 2px 4px #ddd;
+}
+.phantrentt{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    cursor: pointer;
+}
+.hinhthuctt{
+    width: 200px;
+    margin-left: 33px;
+    font-weight: 400;
+    font-size: 15px;   
+    line-height: 26px;
+    list-style: none;
+}
+.dvivanchuyen{
+    width: 200px;
+    font-weight: 400;
+    font-size: 15px;
+    list-style: none;
+    line-height: 26px;
+}
+.ngangiuan{
+    width: 2px;
+    height: 140px;
+    margin-top: 30px;
+    margin-left: -12px;
+    border-right: 1px dashed #f53;
+}
+.noidungnay .item-tenhthuc{
+    line-height: 30px;
+    color: #f53;
+}
+.tenhthuc{
+    color: #f53;
+}
+.item-tenhthuc:hover{
+    color: #f53;
+}
+.item-tenhthuc2{
+    line-height: 30px;
+    margin-left: 10px;
+}
+.item-tenhthuc2:hover{
+    color: #f53;
+}
+.phantrentt .fa-caret-right{
+    color: #f53;
+}
+.phantrentt .fa-sort-down{
+    color: #ccc;
+}
+.luuy{
+    margin-left: 40px;
+    padding-bottom: 10px;
+    font-size: 15px;
+    text-decoration: underline;
+}
+.noidungluuy{
+    height: 50px;
+}
+.chinhsachvc{
+    width: 400px;
+    margin: auto;
+    text-align: center;
+    line-height: 20px;
+    margin-top: 10px;
+    color: #f53;
+}
+.ngancuoi{
+    width: 150px;
+    margin: auto;
+    margin-top: 15px;
+    border-bottom: 1px dashed #f53;
+}
