--- a/css/gioHang.css
+++ b/css/gioHang.css
@@ -185,6 +185,10 @@ img{
     line-height: 30px;
     color: #f53;
 }
+.noidung2nay .item-tenhthuc{
+    line-height: 30px;
+    color: #f53;
+}
 .tenhthuc{
     color: #f53;
 }
