--- a/css/gioHang.css
+++ b/css/gioHang.css
@@ -210,8 +210,9 @@ img{
 }
 .luuy{
     margin-left: 40px;
-    padding-bottom: 10px;
+    padding-bottom: 5px;
     font-size: 15px;
+    margin-top: 5px;
     text-decoration: underline;
 }
 .noidungluuy{
