--- a/css/style.css
+++ b/css/style.css
@@ -1016,7 +1016,7 @@ i.item-khuVuc-like-fill{
     line-height: 30px;
 }
 .ndcskh:hover{
-    color: orange;
+    color: yellow;
 }
 .shopsale_noidung{
     list-style: none;
