--- a/css/gioHang.css
+++ b/css/gioHang.css
@@ -48,7 +48,8 @@ img{
 .item-giohang .tensp{
     width: 200px;
     text-align: center;
-    margin-left: 50px;
+    margin-left: 40px;
+    padding-right: 10px;
     font-size: 16px;
 }
 .item-giohang .gia .giaGoc{
