--- a/css/style.css
+++ b/css/style.css
@@ -1074,7 +1074,7 @@ i.item-khuVuc-like-fill{
     color: #fff;
 }
 .nuoc:hover{
-    color: orange;
+    color: yellow;
     cursor: pointer;
 }
 .diachishop{
