--- a/css/style.css
+++ b/css/style.css
@@ -544,6 +544,10 @@ img{
     background-color: #ccc;
     cursor: pointer;
 }
+.itm1:hover::before{
+    content: ">";
+}
+
 .itm1:last-child:hover{
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;    
